@@ -1,30 +1,27 @@
 package perobobbot.twitch.api;
 
-import com.google.common.collect.ImmutableMap;
 import fpc.tools.lang.IdentifiedEnumTools;
+import fpc.tools.lang.MapTool;
 import io.micronaut.core.annotation.Introspected;
 import lombok.Getter;
 import lombok.NonNull;
 import lombok.Value;
 
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 @Getter
 @Value
 @Introspected
 public class Conditions implements Iterable<Map.Entry<CriteriaType, String>> {
 
-    @NonNull ImmutableMap<CriteriaType, String> values;
+    @NonNull Map<CriteriaType, String> values;
 
     public @NonNull Optional<String> findConditionValue(@NonNull CriteriaType criteriaType) {
         return Optional.ofNullable(values.get(criteriaType));
     }
 
-    public @NonNull ImmutableMap<String, String> toMap() {
-        return values.entrySet().stream().collect(ImmutableMap.toImmutableMap(e -> e.getKey().getIdentification(), Map.Entry::getValue));
+    public @NonNull Map<String, String> toMap() {
+        return values.entrySet().stream().collect(MapTool.collector(e -> e.getKey().getIdentification(), Map.Entry::getValue));
     }
 
     @Override
@@ -33,13 +30,13 @@ public class Conditions implements Iterable<Map.Entry<CriteriaType, String>> {
     }
 
     public static @NonNull Conditions singleCondition(@NonNull CriteriaType criteriaType, @NonNull String value) {
-        return new Conditions(ImmutableMap.of(criteriaType,value));
+        return new Conditions(Map.of(criteriaType,value));
     }
 
-    public static @NonNull Conditions fromMap(@NonNull ImmutableMap<String, String> conditions) {
+    public static @NonNull Conditions fromMap(@NonNull Map<String, String> conditions) {
         final var values = conditions.entrySet()
                                      .stream()
-                                     .collect(ImmutableMap.toImmutableMap(e -> IdentifiedEnumTools.getEnum(e.getKey(), CriteriaType.class), Map.Entry::getValue));
+                                     .collect(MapTool.collector(e -> IdentifiedEnumTools.getEnum(e.getKey(), CriteriaType.class), Map.Entry::getValue));
         return new Conditions(values);
     }
 
@@ -60,7 +57,7 @@ public class Conditions implements Iterable<Map.Entry<CriteriaType, String>> {
         }
 
         public @NonNull Conditions build() {
-            return new Conditions(ImmutableMap.copyOf(values));
+            return new Conditions(Collections.unmodifiableMap(values));
         }
 
     }
