@@ -1,10 +1,11 @@
 package perobobbot.twitch.api;
 
-import com.google.common.collect.ImmutableSet;
 import fpc.tools.lang.IdentifiedEnumWithAlternateIdentifications;
 import lombok.Getter;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
+
+import java.util.Set;
 
 @RequiredArgsConstructor
 public enum RewardRedemptionStatus implements IdentifiedEnumWithAlternateIdentifications {
@@ -17,11 +18,11 @@ public enum RewardRedemptionStatus implements IdentifiedEnumWithAlternateIdentif
     private final @NonNull String identification;
 
     @Getter
-    private final @NonNull ImmutableSet<String> alternateIdentifications;
+    private final @NonNull Set<String> alternateIdentifications;
 
     RewardRedemptionStatus(@NonNull String identification, @NonNull String alternateIdentifications) {
         this.identification = identification;
-        this.alternateIdentifications = ImmutableSet.of(alternateIdentifications);
+        this.alternateIdentifications = Set.of(alternateIdentifications);
     }
 
     @Override
