@@ -1,11 +1,12 @@
 package perobobbot.twitch.api.eventsub.event;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.collect.ImmutableList;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.serde.annotation.Serdeable;
 import lombok.NonNull;
 import lombok.Value;
+
+import java.util.List;
 
 @Value
 @Serdeable
@@ -17,7 +18,7 @@ public class Outcome {
     @JsonProperty("channel_points")
     int channelPoints;
     @JsonProperty("top_predictors")
-    @NonNull ImmutableList<TopPredictor> topPredictors;
+    @NonNull List<TopPredictor> topPredictors;
 
 
     @java.beans.ConstructorProperties({"id", "title", "color", "users", "channelPoints", "topPredictors"})
@@ -25,12 +26,12 @@ public class Outcome {
                    @NonNull OutcomeColor color,
                    int users,
                    int channelPoints,
-                   @Nullable  ImmutableList<TopPredictor> topPredictors) {
+                   @Nullable  List<TopPredictor> topPredictors) {
         this.id = id;
         this.title = title;
         this.color = color;
         this.users = users;
         this.channelPoints = channelPoints;
-        this.topPredictors = topPredictors == null ? ImmutableList.of():topPredictors;
+        this.topPredictors = topPredictors == null ? List.of():topPredictors;
     }
 }
