@@ -1,13 +1,14 @@
 package perobobbot.twitch.service.client;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import jakarta.inject.Singleton;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import perobobbot.twitch.api.ChannelInformation;
 import perobobbot.twitch.service.api.ChannelService;
 import perobobbot.twitch.web.client.ChannelClient;
+
+import java.util.List;
+import java.util.Set;
 
 @Singleton
 @RequiredArgsConstructor
@@ -16,12 +17,12 @@ public class ClientChannelService implements ChannelService {
     private final @NonNull ChannelClient channelClient;
 
     @Override
-    public @NonNull ImmutableList<ChannelInformation> getChannelInformation(@NonNull ImmutableSet<String> broadcasterIds) {
+    public @NonNull List<ChannelInformation> getChannelInformation(@NonNull Set<String> broadcasterIds) {
         final var channelInformation = channelClient.getChannelInformation(broadcasterIds);
         if (channelInformation == null) {
-            return ImmutableList.of();
+            return List.of();
         }
-        return ImmutableList.copyOf(channelInformation.getData());
+        return List.of(channelInformation.getData());
     }
 
 }
