@@ -1,6 +1,5 @@
 package perobobbot.callback.impl;
 
-import com.google.common.collect.ImmutableMap;
 import fpc.tools.lang.MapTool;
 import fpc.tools.lang.Subscription;
 import jakarta.inject.Singleton;
@@ -10,6 +9,7 @@ import perobobbot.callback.api.Callback;
 import perobobbot.callback.api.CallbackIdIsAlreadyUsed;
 import perobobbot.callback.api.CallbackManager;
 
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -17,7 +17,7 @@ import java.util.function.Predicate;
 @Singleton
 public class DefaultCallbackManager implements CallbackManager {
 
-    private ImmutableMap<String, Callback> callbacks = ImmutableMap.of();
+    private Map<String, Callback> callbacks = Map.of();
 
     @Override
     public @NonNull Optional<Callback> findCallback(@NonNull String id) {
@@ -30,10 +30,7 @@ public class DefaultCallbackManager implements CallbackManager {
         if (callbacks.containsKey(id)) {
             throw new CallbackIdIsAlreadyUsed(id);
         }
-        this.callbacks = ImmutableMap.<String, Callback>builder()
-                                     .putAll(this.callbacks)
-                                     .put(id, callback)
-                                     .build();
+        this.callbacks = MapTool.addOneEntry(this.callbacks,id,callback);
         return () -> removeCallback(id);
     }
 
